Major update in the system - more to follow

--- a/templates/base.html
+++ b/templates/base.html
@@ -20,6 +20,9 @@
           <li class="nav-item">
             <a class="nav-link" href="{{ url_for('home') }}">Home</a>
           </li>
+          <li class="nav-item"></li>
+            <a class="nav-link" href="{{ url_for('feeds_page') }}">Feeds</a>
+          </li>
           <li class="nav-item">
             <a class="nav-link" href="{{ url_for('settings') }}">Settings</a>
           </li>
