--- a/templates/home.html
+++ b/templates/home.html
@@ -7,15 +7,18 @@
 <div class="container text-center">
   <div class="row">
     <div class="col">
-  <h1 class="text-center my-5">BBC Feed Results</h1>
-  {% for item in bbc_feed %}
-    <div class="card my-3">
-      <div class="card-header"><a href="{{ item.link }}">{{ item.title }}</a></div>
-      <div class="card-body">
-        {{ item.description }}
-      </div>
-      </div>
-{% endfor %}
+      <h1 class="text-center my-5">Currently Displayed Article</h1>
+  
+      {% if current_displayed_article %}
+        <div class="card my-3">
+          <div class="card-header">{{ current_displayed_article.title }}</div>
+          <div class="card-body">
+            {{ current_displayed_article.summary }}
+          </div>
+        </div>
+      {% else %}
+        <p>No article is currently displayed.</p>
+      {% endif %}
     </div>
     <div class="col">
     <h1 class="text-center my-5">Send BoopBox Message</h1>
